<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#333333"
    android:padding="20dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/android_logo"
        android:layout_marginBottom="80dp"/> 

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/which_weather_on_mars"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="80dp"/> 

    <Button
        android:id="@+id/button_history"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/show_history"
        android:backgroundTint="#D32F2F"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/button_control"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/control"
        android:backgroundTint="#2196F3"
        android:textColor="#FFFFFF"/>
</LinearLayout>
