<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="#333333">

    <Button
        android:id="@+id/buttonStartStop"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:backgroundTint="#4CAF50"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonFront"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/front"
            android:enabled="false"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLeft"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:enabled="false"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/buttonRight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/right"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"/>

</LinearLayout> 